added pdfequips-navbar & structured data

--- a/index.scss
+++ b/index.scss
@@ -1,37 +1,6 @@
+@import "pdfequips-navbar/scss/navbar";
 @import "~cssmolecule";
 @import "~custom-bs";
-// @include type;
-@include images;
-@include containers;
-@include grid;
-@include tables;
-@include forms;
-@include buttons;
-@include transitions;
-@include dropdown;
-@include button-group;
-@include nav;
-@include navbar;
-@include card;
-@include accordion;
-@include breadcrumb;
-@include pagination;
-@include badge;
-@include alert;
-@include progress;
-@include list-group;
-@include close;
-@include toasts;
-@include modal;
-@include tooltip;
-@include popover;
-@include carousel;
-@include spinners;
-@include offcanvas;
-@include placeholders;
-
-// Helpers
-@include helpers;
 
 %debug {
   outline: 1px solid;
@@ -39,8 +8,6 @@
 
 @import "./scss/minxins";
 @import "./scss/placeholders";
-@include list-group;
-@include api;
 
 $pdf-color: #fc271c;
 $color-map: (
@@ -64,12 +31,12 @@ $color-map: (
   "translate-pdf": #185abc,
 );
 
-// html,
-// body,
-// #__next,
-// .tools-page {
-//   height: 100%;
-// }
+body {
+  @include ar-wrapper {
+    text-align: right !important;
+  }
+  font-family: "Raleway", sans-serif;
+}
 
 .tools-page {
   min-height: fit-content;
