--- a/scss/_editpage.scss
+++ b/scss/_editpage.scss
@@ -1,5 +1,3 @@
-/// i have this animation
-/// and i'm using it as below but i'ts not working
 @keyframes pulse {
   0% {
     -moz-box-shadow: 0 0 0 0 rgba(var(--pulse-animation-color), 0.4);
@@ -47,14 +45,15 @@
       @include extend("w-100 placeholder-glow h-100 position-absolute");
 
       .inner-loader {
-        @include extend("placeholder col-12 fh position-absolute w-100 d-flex justify-content-center align-items-center"
+        @include extend(
+          "placeholder col-12 fh position-absolute w-100 d-flex justify-content-center align-items-center"
         );
       }
     }
 
     .gear-button {
-      @include extend("position-fixed");
-      top: 10%;
+      @include extend("position-absolute");
+      top: 80px;
       left: 2.535px;
       z-index: 15;
       display: none;
@@ -93,7 +92,8 @@
     .icon-container {
       font-size: 1.5em;
       display: flex;
-      @include extend("w-100 h-100 justify-content-center align-items-center position-absolute rounded-circle"
+      @include extend(
+        "w-100 h-100 justify-content-center align-items-center position-absolute rounded-circle"
       );
       top: 0;
       left: 0;
@@ -115,16 +115,19 @@
     }
 
     grid-template-columns: repeat(12, 1fr);
-    grid-template-areas: "header"
-    "body"
-    "body"
-    "body"
-    "body"
-    "body"
-    "body"
-    "body"
-    "footer"
-    "footer";
+    grid-template-areas:
+      "header"
+      "body"
+      "body"
+      "body"
+      "body"
+      "body"
+      "body"
+      "body"
+      "body"
+      "body"
+      "footer"
+      "footer";
     display: flex;
     min-height: 85vh;
     flex-direction: column;
@@ -150,7 +153,7 @@
     transition: 0.3s;
 
     @media (max-width: 600px) {
-      position: fixed;
+      position: absolute;
       width: 100%;
 
       [dir="rtl"] &,
@@ -188,8 +191,6 @@
       margin-bottom: 1rem;
     }
 
-
-
     .option-title {
       @each $key, $color in $color-map {
         &.#{$key} {
@@ -216,9 +217,7 @@
       $r: red($color);
       $g: green($color);
       $b: blue($color);
-      --pulse-animation-color: #{$r},
-      #{$g},
-      #{$b};
+      --pulse-animation-color: #{$r}, #{$g}, #{$b};
       animation: pulse 2s infinite;
     }
   }
