--- a/scss/_editpage.scss
+++ b/scss/_editpage.scss
@@ -126,8 +126,8 @@
       "body"
       "body"
       "body"
-      "footer"
-      "footer";
+      "body"
+      "body";
     display: flex;
     min-height: 85vh;
     flex-direction: column;
@@ -144,17 +144,30 @@
     }
 
     .grid-footer {
-      grid-area: footer;
-      grid-column: 1 / -1;
 
       @include extend("d-flex justify-content-center align-items-center");
     }
+
+    & + .show-onsmall {
+      @include extend("d-none");
+      width: 100%;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      @media (max-width: 600px) {
+        display: block !important;
+      }
+    }
+
 
     transition: 0.3s;
 
     @media (max-width: 600px) {
       position: absolute;
       width: 100%;
+      .hide-onsmall {
+        display: none;
+      }
 
       [dir="rtl"] &,
       [lang="ar"] & {
