--- a/scss/_editpage.scss
+++ b/scss/_editpage.scss
@@ -18,12 +18,14 @@
 .edit-page {
   display: flex;
   min-height: 100%;
+  align-items: flex-start;
 
   %border {
     border: 1px solid #dee2e6;
   }
 
   .edit-area {
+    touch-action: auto !important;
     flex: 0 0 69%;
 
     @media (max-width: 600px) {
@@ -31,7 +33,6 @@
     }
 
     padding: 1rem;
-    @extend %border;
     border-radius: 0.25rem;
     position: relative;
 
@@ -45,8 +46,7 @@
       @include extend("w-100 placeholder-glow h-100 position-absolute");
 
       .inner-loader {
-        @include extend(
-          "placeholder col-12 fh position-absolute w-100 d-flex justify-content-center align-items-center"
+        @include extend("placeholder col-12 fh position-absolute w-100 d-flex justify-content-center align-items-center"
         );
       }
     }
@@ -92,8 +92,7 @@
     .icon-container {
       font-size: 1.5em;
       display: flex;
-      @include extend(
-        "w-100 h-100 justify-content-center align-items-center position-absolute rounded-circle"
+      @include extend("w-100 h-100 justify-content-center align-items-center position-absolute rounded-circle"
       );
       top: 0;
       left: 0;
@@ -106,6 +105,7 @@
 
   .options {
     border-left: 1px solid #dee2e6;
+    pointer-events: none !important;
     flex: 1 0 25%;
     grid-template-rows: 7% 85% 13%;
 
@@ -115,19 +115,18 @@
     }
 
     grid-template-columns: repeat(12, 1fr);
-    grid-template-areas:
-      "header"
-      "body"
-      "body"
-      "body"
-      "body"
-      "body"
-      "body"
-      "body"
-      "body"
-      "body"
-      "body"
-      "body";
+    grid-template-areas: "header"
+    "body"
+    "body"
+    "body"
+    "body"
+    "body"
+    "body"
+    "body"
+    "body"
+    "body"
+    "body"
+    "body";
     display: flex;
     min-height: 85vh;
     flex-direction: column;
@@ -148,12 +147,13 @@
       @include extend("d-flex justify-content-center align-items-center");
     }
 
-    & + .show-onsmall {
+    &+.show-onsmall {
       @include extend("d-none");
       width: 100%;
       position: fixed;
       bottom: 0;
       left: 0;
+
       @media (max-width: 600px) {
         display: block !important;
       }
@@ -165,6 +165,7 @@
     @media (max-width: 600px) {
       position: absolute;
       width: 100%;
+
       .hide-onsmall {
         display: none;
       }
@@ -230,7 +231,9 @@
       $r: red($color);
       $g: green($color);
       $b: blue($color);
-      --pulse-animation-color: #{$r}, #{$g}, #{$b};
+      --pulse-animation-color: #{$r},
+      #{$g},
+      #{$b};
       animation: pulse 2s infinite;
     }
   }
