--- a/scss/_editpage.scss
+++ b/scss/_editpage.scss
@@ -25,7 +25,7 @@
   }
 
   .edit-area {
-    touch-action: auto !important;
+    // touch-action: auto !important;
     flex: 0 0 69%;
 
     @media (max-width: 600px) {
