--- a/scss/_sign-pdf-options.scss
+++ b/scss/_sign-pdf-options.scss
@@ -5,7 +5,7 @@
 
     .option-row {
         display: flex;
-        @include extend("d-flex align-items-center p-3");
+        @include extend("d-flex align-items-center p-3 justify-content-between position-relative");
         gap: 0.75rem;
         border: 1px solid #ddd;
         border-left: 5px solid map-get($color-map, "sign-pdf");
@@ -14,7 +14,7 @@
         cursor: pointer;
         transition: box-shadow .1s;
 
-        &:hover {
+        &:hover:not(.dropdown-visible) {
             @include extend("shadow");
         }
 
@@ -31,6 +31,70 @@
         .option-add {
             font-weight: bold;
             color: #636e72
+        }
+
+        .signature-svg {
+            width: 100px;
+            height: 57.33px;
+            display: inline-block;
+            vertical-align: middle;
+
+            svg {
+                #react-sketch-canvas__canvas-background {
+                    fill: transparent !important;
+                }
+            }
+        }
+
+        .dropdown-toggler {
+            @include extend("btn btn-light");
+        }
+
+        .signature-dropdown {
+            @include extend("p-3 position-absolute bg-white d-flex flex-column shadow");
+            min-height: 100%;
+
+            &.hide {
+                @include extend("d-none")
+            }
+
+            row-gap: 12px;
+            top: 100%;
+            z-index: 1;
+            margin-left: -5px;
+            width: calc(100% + 5px);
+            left: 0;
+
+            .signature-area {
+                @include extend("d-flex align-items-center");
+                background-color: lighten(map-get($color-map, "sign-pdf"), 50);
+
+                .signature-area-svg {
+                    margin: 0 auto;
+
+                    .signature-svg {
+                        @include extend("d-flex justify-content-end")
+                    }
+
+                    svg {
+                        flex: 0 1 75%
+                    }
+                }
+
+                .delete-btn {
+                    @include extend("btn btn-light");
+                    margin-left: auto;
+                    margin-right: 12px;
+                }
+            }
+
+            .add-signature {
+                @include extend("w-100 p-2");
+
+                .add-icon {
+                    margin-right: 5px;
+                }
+            }
         }
     }
 }
