--- a/index.scss
+++ b/index.scss
@@ -1,6 +1,8 @@
 @import "pdfequips-navbar/scss/navbar";
 @import "~cssmolecule";
 @import "~custom-bs";
+@import "~flex-system/index";
+@include flex-system;
 
 %debug {
   outline: 1px solid;
@@ -285,3 +287,52 @@ footer {
     cursor: not-allowed !important;
   }
 }
+
+.clear {
+  opacity: 0
+}
+
+@import "./scss/style-tools";
+
+.resizable {
+  @include extend("position-absolute");
+  border: 1.5px solid map-get($color-map, "sign-pdf");
+
+  .input {
+    @include extend("w-100 h-100");
+  }
+}
+
+.handle {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background-color: white;
+  border: 2px solid map-get($color-map, "sign-pdf");
+}
+
+.top-left {
+  top: -5px;
+  left: -5px;
+  cursor: nwse-resize;
+}
+
+.top-right {
+  top: -5px;
+  right: -5px;
+  cursor: nesw-resize;
+}
+
+.bottom-left {
+  bottom: -5px;
+  left: -5px;
+  cursor: nesw-resize;
+}
+
+.bottom-right {
+  bottom: -5px;
+  right: -5px;
+  cursor: nwse-resize;
+}
+
+@import "i-text-input/src/scss/_input.scss";
