--- a/scss/_sign-pdf-options.scss
+++ b/scss/_sign-pdf-options.scss
@@ -5,7 +5,7 @@
 
     .option-row {
         display: flex;
-        @include extend("d-flex align-items-center p-3 justify-content-between position-relative");
+        @include extend("d-flex w-100 align-items-center p-3 justify-content-between position-relative");
         gap: 0.75rem;
         border: 1px solid #ddd;
         border-left: 5px solid map-get($color-map, "sign-pdf");
