initialized style tools

--- a/scss/_style-tools.scss
+++ b/scss/_style-tools.scss
@@ -5,6 +5,10 @@
     z-index: 1;
     width: 69%;
 
+    &.clear {
+        pointer-events: none;
+    }
+
     // >* {
     //     // @include extend("push-left")
     // }
@@ -15,10 +19,35 @@
         @include extend("px-2");
     }
 
+    .select {
+        @include extend("position-absolute w-100");
+        top: 100%;
+        left: 0;
+
+        .options {
+            @include extend("list-unstyled bg-white w-100 rounded");
+
+            li {
+                @include extend("padding");
+
+                &.big-padding {
+                    padding: 15px;
+                }
+
+                cursor: pointer;
+
+                &:hover,
+                &.active {
+                    background-color: #ecf0f1;
+                }
+            }
+        }
+    }
+
     .fonts-dropdown {
-        @include extend("padding border rounded flex-row main-space-between cross-center transition");
+        @include extend("padding border rounded flex-row main-space-between cross-center transition position-relative");
         user-select: none;
-        flex: 0 0 var(--col-2);
+        flex: 0 0 var(--col-3);
         cursor: pointer;
 
         &:hover {
@@ -31,7 +60,13 @@
     }
 
     .font-size-tool {
-        @include extend("border rounded flex-row cross-center self-stretch");
+        @include extend("border rounded flex-row cross-center self-stretch position-relative");
+        cursor: pointer;
+
+        .font-size-options {
+            max-height: 351.9px;
+            overflow: auto
+        }
 
         button {
             @include extend("btn btn-light border border-top-0 border-bottom-0 p-0");
@@ -58,8 +93,11 @@
 
         .font-size {
             @include extend("available text-center padding px-0 text-muted h-100 flex-row main-center cross-center");
-            cursor: text;
-            font-size: .5em;
+
+            &.sm {
+                font-size: .5em;
+            }
+
             background-color: #dfe6e9;
         }
     }
@@ -69,10 +107,26 @@
         font-weight: 500;
         @include extend("position-relative btn btn-light border-0 rounded-2 flex-row");
         padding: 5px 5.75px;
+        cursor: pointer;
 
         // * {
         //     outline: 1px solid red;
         // }
+        .color-picker {
+            @include extend("position-absolute");
+            top: 50%;
+            left: 50%;
+            transform: translate(-45%, -50%);
+            opacity: 0;
+            z-index: 1;
+            min-width: 100%;
+            min-height: 100%;
+            outline: 1px solid;
+
+            .MuiInputBase-root.MuiOutlinedInput-root.MuiInputBase-colorPrimary.MuiInputBase-formControl.MuiInputBase-adornedStart.css-1q6at85-MuiInputBase-root-MuiOutlinedInput-root {
+                cursor: pointer;
+            }
+        }
 
         svg {
             font-size: 1.25em;
@@ -108,6 +162,11 @@
     .more>.indicator {
         @include extend("position-relative btn btn-light border-0 padding rounded-2 text-center");
 
+        &.active {
+            background-color: lighten(map-get($color-map, "sign-pdf"), 50);
+            color: map-get($color-map, "sign-pdf");
+        }
+
         svg {
             @include extend("m-0 mb-1");
         }
@@ -128,23 +187,78 @@
                 background-color: transparent;
             }
         }
+
+        .opacity-tool-dropdown {
+            @include extend("position-absolute w-100");
+            top: 0%;
+
+        }
+    }
+
+    .spacing-tool-dropdown,
+    .opacity-tool-dropdown {
+        @include extend("position-absolute bg-white p-2 rounded-2 shadow-lg");
+        min-width: 250px;
+        width: fit-content;
+        top: 100%;
+
+    }
+
+    .slider-container {
+        width: 100%;
+        @include extend("py-2");
+        // margin: 10px 0;
+        // padding: 0 20px;
+
+        @include extend("flex-row cross-center main-space-between");
+        column-gap: 10px;
+
+        .input {
+            @include extend("col-2 available m-0");
+
+            // now i want to remove the up and down arrows that increase and decrease the input[number] value i don't want those to appear in the design, is this possible in css for example?
+            input {
+                @include extend("w-100 p-2 rounded text-center");
+                border: .5px solid #ccc;
+                outline: none;
+            }
+        }
+    }
+
+    .custom-slider {
+        @include extend("col-8 m-0");
+
+        .rc-slider-track {
+            background-color: $main-color !important;
+        }
+
+        .rc-slider-handle {
+            border-color: $main-color !important;
+            height: 20px;
+            width: 20px;
+            margin-top: -9px;
+            background-color: #fff;
+            border-radius: 50%;
+        }
+
+        .rc-slider-rail {
+            background-color: #ddd !important;
+        }
+
+        .rc-slider {
+            cursor: pointer;
+        }
+    }
+
+    p {
+        @include extend("lead my-0");
+        text-align: start;
     }
 
     .spacing-tool-wrapper {
         @include extend("position-relative");
 
-        p {
-            @include extend("lead my-0");
-            text-align: start;
-        }
 
-        .spacing-tool-dropdown {
-            @include extend("position-absolute bg-white p-2 rounded-2 shadow-lg");
-            min-width: 250px;
-            width: fit-content;
-            top: 100%;
-            right: -325%;
-        }
 
         display: flex;
         flex-direction: column;
@@ -161,53 +275,12 @@
             flex-direction: column;
             align-items: center;
             width: 100%;
+            right: -325%;
         }
 
-        .slider-container {
-            width: 100%;
-            @include extend("py-2");
-            // margin: 10px 0;
-            // padding: 0 20px;
 
-            @include extend("flex-row cross-center main-space-between");
-            column-gap: 10px;
 
-            .input {
-                @include extend("col-2 available m-0");
 
-                // now i want to remove the up and down arrows that increase and decrease the input[number] value i don't want those to appear in the design, is this possible in css for example?
-                input {
-                    @include extend("w-100 p-2 rounded text-center");
-                    border: .5px solid #ccc;
-                    outline: none;
-                }
-            }
-        }
-
-        .custom-slider {
-            @include extend("col-8 m-0");
-
-            .rc-slider-track {
-                background-color: #3867d6 !important;
-            }
-
-            .rc-slider-handle {
-                border-color: #3867d6 !important;
-                height: 20px;
-                width: 20px;
-                margin-top: -9px;
-                background-color: #fff;
-                border-radius: 50%;
-            }
-
-            .rc-slider-rail {
-                background-color: #ddd !important;
-            }
-
-            .rc-slider {
-                cursor: pointer;
-            }
-        }
 
 
         // .rc-slider {
