--- a/index.scss
+++ b/index.scss
@@ -4,6 +4,12 @@
 @import "~flex-system/index";
 @include flex-system;
 
+.wrapper {
+  .input {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+}
+
 %debug {
   outline: 1px solid;
 }
@@ -33,6 +39,8 @@ $color-map: (
   "translate-pdf": #185abc,
   "sign-pdf": #341f97
 );
+
+$main-color: #341f97;
 
 html {
   scroll-behavior: smooth;
@@ -209,38 +217,38 @@ footer {
 
 
 .cedarville-cursive-regular {
-  font-family: "Cedarville Cursive", cursive;
+  font-family: "Cedarville Cursive", cursive !important;
   font-weight: 400;
   font-style: normal;
 }
 
 .arizonia-regular {
-  font-family: "Arizonia", cursive;
+  font-family: "Arizonia", cursive !important;
   font-weight: 400;
   font-style: normal;
 }
 
 .lobster-regular {
-  font-family: "Lobster", sans-serif;
+  font-family: "Lobster", sans-serif !important;
   font-weight: 400;
   font-style: normal;
 }
 
 
 .rouge-script-regular {
-  font-family: "Rouge Script", cursive;
+  font-family: "Rouge Script", cursive !important;
   font-weight: 400;
   font-style: normal;
 }
 
 .alex-brush-regular {
-  font-family: "Alex Brush", cursive;
+  font-family: "Alex Brush", cursive !important;
   font-weight: 400;
   font-style: normal;
 }
 
 .sacramento-regular {
-  font-family: "Sacramento", cursive;
+  font-family: "Sacramento", cursive !important;
   font-weight: 400;
   font-style: normal;
 }
