--- a/index.scss
+++ b/index.scss
@@ -8,6 +8,10 @@
   .input {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
+
+  .icon {
+    @include extend("w-100 h-100")
+  }
 }
 
 %debug {
