--- a/scss/_sign-pdf-options.scss
+++ b/scss/_sign-pdf-options.scss
@@ -66,6 +66,7 @@
 
         .dropdown-toggler {
             @include extend("btn btn-light");
+            z-index: 1;
         }
 
         .signature-dropdown {
