--- a/scss/_editpage.scss
+++ b/scss/_editpage.scss
@@ -152,6 +152,7 @@
       position: fixed;
       bottom: 0;
       left: 0;
+      z-index: 801;
 
       @media (max-width: 600px) {
         display: block !important;
