--- a/scss/_editpage.scss
+++ b/scss/_editpage.scss
@@ -108,24 +108,24 @@
     flex: 1 0 25%;
     grid-template-rows: 7% 85% 13%;
 
-    @include xs {
-      display: grid;
-      grid-template-rows: repeat(12, 1fr);
-    }
+    // @include xs {
+    //   display: grid;
+    //   grid-template-rows: repeat(12, 1fr);
+    // }
 
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-areas: "header"
-    "body"
-    "body"
-    "body"
-    "body"
-    "body"
-    "body"
-    "body"
-    "body"
-    "body"
-    "body"
-    "body";
+    // grid-template-columns: repeat(12, 1fr);
+    // grid-template-areas: "header"
+    // "body"
+    // "body"
+    // "body"
+    // "body"
+    // "body"
+    // "body"
+    // "body"
+    // "body"
+    // "body"
+    // "body"
+    // "body";
     display: flex;
     min-height: 85vh;
     flex-direction: column;
