--- a/index.scss
+++ b/index.scss
@@ -9,6 +9,20 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
+  &:not(.no-outline) {
+    border-color: #341f97 !important;
+  }
+
+  &.no-outline {
+    &:hover {
+      border-color: #341f97 !important;
+
+      .resize-handle {
+        opacity: 1;
+      }
+    }
+  }
+
   .icon {
     @include extend("w-100 h-100")
   }
@@ -28,6 +42,10 @@
         fill: transparent !important;
       }
     }
+  }
+
+  .resize-handle {
+    background-color: #341f97 !important
   }
 }
 
