--- a/scss/_sign-pdf-options.scss
+++ b/scss/_sign-pdf-options.scss
@@ -102,7 +102,8 @@
                 background-color: lighten(map-get($color-map, "sign-pdf"), 50);
 
                 .signature-area-svg {
-                    margin: 0 auto;
+                    flex: 1;
+                    @include extend("d-flex justify-content-space-between align-items-center");
 
                     .signature-svg {
                         @include extend("d-flex justify-content-end")
